fix: add bottom margin on inventory message to give more spacing with BNPL

--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -231,6 +231,9 @@ button.reset-selection-button
   font-weight: 400
   font-size: 0.75rem
 
+  @media screen and (max-width: $break-medium)
+    margin: 8px 0 32px 0
+
 #payment-processor-messaging
   margin: 20px 0 0
   width: 100%
